[gd_scene load_steps=2 format=3 uid="uid://c0bjbv3u6kf8n"]

[ext_resource type="Script" uid="uid://y361428p0gnf" path="res://login/LoginScreen.gd" id="1_5fley"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5fley")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UsernameEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="PasswordEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="WrongPassword" type="AcceptDialog" parent="."]

[node name="UserNotFound" type="ConfirmationDialog" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
